# axiom-jupyter-notebook-ext

./: .gitignore  README.md  Untitled.ipynb  Untitled1.ipynb  axiom_jupyter_notebook_ext.py  pyproject.toml  quickstart.ipynb  some_data.csv
.ipynb_checkpoints/: quickstart-checkpoint.ipynb
axiom_jupyter_notebook_ext/: insights.py  jupyter_axiom_extension.py  mcp_agent.py  nlq.py  predictive_analytics.py
axiom_jupyter_notebook_ext.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
axiom_jupyter_notebook_ext/utils/: __init__.py
